# spatial_world_model

./: .gitignore  Layers_Activation.ipynb  README.md  config.yaml  debug_main.py  grid_analysis_readme.md  optimized_linear_probe.py  pyproject.toml
SpatialEval/: .gitignore  ACTIVATIONS.md  README.md  inference_lm.py  inference_vlm.py  run_all_tasks.py
SpatialEval/configs/: inference_configs.py
SpatialEval/evals/: evaluation.py
SpatialEval/models/: bunny_model.py  llava_model.py  model_utils.py
SpatialEval/scripts/: inf_lm.sh  inf_vlm.sh
SpatialEval/tests/: test_vlm_cache_smoke.py
SpatialEval/utils/: format_filename.py  residual_stream.py
notebooks/: 1_inverse.ipynb  Layers_Activation.ipynb  nonlinear_probes_optuna.ipynb
old/: linear_geometry_experiments_composition.py  linear_geometry_experiments_inverse.py  linear_geometry_experiments_transitivity.py
results/: accuracy_summary.csv  all_results.pkl  layer16_relation_analysis.csv  layer16_representations.pkl  layer16_results.pkl  layer24_relation_analysis.csv  layer24_representations.pkl  layer24_results.pkl  layer8_relation_analysis.csv  layer8_representations.pkl  layer8_results.pkl
results/linear_result_check/: layer16_validation_summary.txt  layer24_validation_summary.txt  layer8_validation_summary.txt
src/: compostion_relation_100k.py  inverse_relation_100k.py  main.py  utils.py
src/2object_grid/: README.md  compositionality_grid.py  data_grid.py  main_grid.py  prob_grid.py  test_grid_2object.ipynb
src/analysis/: compositionality.py  inverse.py  transitivity.py
src/data/: data.py  embed.py  (+4 more)
(+1 files in other folders)
